modificaciones en html, y primeras funcionalidades JS

--- a/index.html
+++ b/index.html
@@ -74,45 +74,41 @@
     </header>
 
     <main class="main">
-        <section class="container-fluid bienvenida" id="Bienvenida">
+        <section class="container-fluid bienvenida text-center text-white" id="Bienvenida">
             <h1>Bienvenida</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis officiis delectus nisi dignissimos
-                rerum fuga odit deleniti est dolor, porro, excepturi, facere tenetur possimus ex aliquam repellendus
-                molestiae magnam pariatur.
-                Iusto animi fugit itaque repellendus vitae aspernatur? A ullam minima id ipsa, optio repellendus nam
-                facere dolores impedit iusto recusandae debitis vero voluptate fuga aut excepturi. Rem voluptatum nemo
-                ex!
-                Voluptatum doloremque reiciendis quas non. Natus distinctio culpa expedita illo totam! Excepturi natus
-                labore quaerat eum quam corrupti nam earum, nemo sint non consectetur commodi fuga ea saepe laudantium.
-                Dicta.
-                Consectetur, quam? Impedit deleniti eligendi placeat molestias, atque eveniet id dolores cupiditate
-                possimus quam architecto molestiae eos iste reprehenderit maiores magnam dicta dignissimos voluptatem!
-                Quasi esse id eligendi dicta sed?
-                Totam tempora ratione nam repellat corrupti molestias sunt vel id delectus autem dolore ullam
-                perspiciatis consectetur quaerat eveniet nisi rerum enim recusandae, veritatis reprehenderit eius quo?
-                Unde repellat deleniti vel.
-                Provident eveniet veniam voluptatum ex perferendis eum sint, fugiat ipsum rerum dolorem, minima nulla
-                atque sequi dignissimos soluta labore cum tempore, minus illo! Illum iste cupiditate sit exercitationem
-                dolore deserunt!
-                Enim unde pariatur officiis non a similique alias error eaque cum laudantium dignissimos veritatis
-                quibusdam dolores iure distinctio deleniti, corporis repellat, necessitatibus sapiente perferendis
-                praesentium porro. Est debitis odit sunt!
-                Consectetur beatae commodi aliquam rem nihil mollitia illum, sint id nulla. Molestiae temporibus,
-                praesentium obcaecati eius facilis ad fugit? Cum rerum illo maiores ex veniam nam, repellendus debitis
-                ipsum necessitatibus.
-                Animi eaque perspiciatis fuga ut quisquam, consequuntur corporis expedita error excepturi, unde repellat
-                ad aut tenetur quam at! Consequatur asperiores, deleniti voluptatum ab eveniet iste suscipit quasi
-                labore nobis porro!
-                Accusantium commodi nesciunt necessitatibus illum voluptates ex adipisci! Quod deserunt officiis,
-                exercitationem veniam iste, necessitatibus nisi ratione quos velit aperiam minima aut. Sint blanditiis
-                distinctio accusantium molestias, amet tempore praesentium.
-                Alias optio molestias ipsum, tempore dolorem quasi vero ea, saepe soluta non deserunt ullam!
-                Reprehenderit, repellendus laborum consectetur delectus aut repe</p>
-        </section>
+            <p>¡Bienvenidos a nuestra tienda en línea de productos para mascotas! En nuestro e-commerce encontrarás una
+                amplia gama de productos destinados al cuidado y entretenimiento de tus adorables compañeros caninos,
+                felinos y más.
 
-        <section class="container-fluid tienda" id="Tienda">
+                En nuestra tienda, nos enorgullece ofrecerte una variedad de artículos para mascotas tales como
+                juguetes, alimentos balanceados y accesorios indispensables para su bienestar. Contamos con una amplia
+                selección de juguetes que mantendrán a tus peludos amigos entretenidos y activos durante horas.
+                Asimismo, nuestros alimentos balanceados se encuentran cuidadosamente seleccionados para ofrecerles una
+                alimentación completa y equilibrada.
+
+                Además, disponemos de accesorios esenciales para el paseo, como correas de calidad que asegurarán la
+                seguridad de tus mascotas durante sus caminatas diarias. También contamos con abrigos que protegerán a
+                tus fieles amigos del frío y productos de limpieza, como shampoos especiales que los harán lucir en todo
+                su esplendor. Nuestras cuchas para dormir proporcionan comodidad y un espacio íntimo para que tus
+                mascotas descansen tranquilamente.
+
+                En nuestra tienda en línea, nos comprometemos a brindarte la mejor calidad y atención personalizada.
+                Ofrecemos envío rápido y seguro, así como la posibilidad de realizar fácilmente tus compras desde la
+                comodidad de tu hogar. Nuestro objetivo es hacer de tu experiencia de compra una experiencia placentera
+                y satisfactoria.
+
+                Te invitamos a explorar nuestra tienda en línea y descubrir todos los maravillosos productos que hemos
+                seleccionado especialmente para consentir a tus mascotas. Confía en nosotros y cuida a tus peludos
+                amigos con los mejores productos disponibles en el mercado. ¡Estamos seguros de que no te arrepentirás!
+
+                ¡Gracias por elegirnos como tu tienda de confianza para tus adorables compañeros de vida! Estamos
+                emocionados de acompañarte en esta etapa de compartir amor y felicidad con tus mascotas. ¡Bienvenidos a
+                nuestra gran familia de amantes de los animales!</p>
+        </section>
+        <br>
+        <section class="container-fluid tienda text-center text-white" id="Tienda">
             <h1>Tienda</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis officiis delectus nisi dignissimos
+            <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis officiis delectus nisi dignissimos
                 rerum fuga odit deleniti est dolor, porro, excepturi, facere tenetur possimus ex aliquam repellendus
                 molestiae magnam pariatur.
                 Iusto animi fugit itaque repellendus vitae aspernatur? A ullam minima id ipsa, optio repellendus nam
@@ -143,88 +139,127 @@
                 exercitationem veniam iste, necessitatibus nisi ratione quos velit aperiam minima aut. Sint blanditiis
                 distinctio accusantium molestias, amet tempore praesentium.
                 Alias optio molestias ipsum, tempore dolorem quasi vero ea, saepe soluta non deserunt ullam!
-                Reprehenderit, repellendus laborum consectetur delectus aut repe</p>
-
+                Reprehenderit, repellendus laborum consectetur delectus aut repe</p> -->
         </section>
-
-        <section class="container-fluid Nuevos_Productos" id="Nuevos Productos">
+        <br>
+        <section class="container-fluid Nuevos_Productos text-center text-white" id="Nuevos Productos">
             <h1>Nuevos Productos</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis officiis delectus nisi dignissimos
-                rerum fuga odit deleniti est dolor, porro, excepturi, facere tenetur possimus ex aliquam repellendus
-                molestiae magnam pariatur.
-                Iusto animi fugit itaque repellendus vitae aspernatur? A ullam minima id ipsa, optio repellendus nam
-                facere dolores impedit iusto recusandae debitis vero voluptate fuga aut excepturi. Rem voluptatum nemo
-                ex!
-                Voluptatum doloremque reiciendis quas non. Natus distinctio culpa expedita illo totam! Excepturi natus
-                labore quaerat eum quam corrupti nam earum, nemo sint non consectetur commodi fuga ea saepe laudantium.
-                Dicta.
-                Consectetur, quam? Impedit deleniti eligendi placeat molestias, atque eveniet id dolores cupiditate
-                possimus quam architecto molestiae eos iste reprehenderit maiores magnam dicta dignissimos voluptatem!
-                Quasi esse id eligendi dicta sed?
-                Totam tempora ratione nam repellat corrupti molestias sunt vel id delectus autem dolore ullam
-                perspiciatis consectetur quaerat eveniet nisi rerum enim recusandae, veritatis reprehenderit eius quo?
-                Unde repellat deleniti vel.
-                Provident eveniet veniam voluptatum ex perferendis eum sint, fugiat ipsum rerum dolorem, minima nulla
-                atque sequi dignissimos soluta labore cum tempore, minus illo! Illum iste cupiditate sit exercitationem
-                dolore deserunt!
-                Enim unde pariatur officiis non a similique alias error eaque cum laudantium dignissimos veritatis
-                quibusdam dolores iure distinctio deleniti, corporis repellat, necessitatibus sapiente perferendis
-                praesentium porro. Est debitis odit sunt!
-                Consectetur beatae commodi aliquam rem nihil mollitia illum, sint id nulla. Molestiae temporibus,
-                praesentium obcaecati eius facilis ad fugit? Cum rerum illo maiores ex veniam nam, repellendus debitis
-                ipsum necessitatibus.
-                Animi eaque perspiciatis fuga ut quisquam, consequuntur corporis expedita error excepturi, unde repellat
-                ad aut tenetur quam at! Consequatur asperiores, deleniti voluptatum ab eveniet iste suscipit quasi
-                labore nobis porro!
-                Accusantium commodi nesciunt necessitatibus illum voluptates ex adipisci! Quod deserunt officiis,
-                exercitationem veniam iste, necessitatibus nisi ratione quos velit aperiam minima aut. Sint blanditiis
-                distinctio accusantium molestias, amet tempore praesentium.
-                Alias optio molestias ipsum, tempore dolorem quasi vero ea, saepe soluta non deserunt ullam!
-                Reprehenderit, repellendus laborum consectetur delectus aut repe</p>
-
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./assets/balanceado perros.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Balanceado para perros</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
+                                amet.</p>
+                        </div>
+                        <!-- <div class="card-footer">
+                            <small class="text-body-secondary">Last updated 3 mins ago</small>
+                        </div> -->
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./assets/balanceado gatos.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Balanceado para gatos</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid,
+                                nesciunt..</p>
+                        </div>
+                        <!-- <div class="card-footer">
+                            <small class="text-body-secondary">Last updated 3 mins ago</small>
+                        </div> -->
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./assets/toys.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Juguetes</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
+                                laborum.</p>
+                        </div>
+                        <!-- <div class="card-footer">
+                            <small class="text-body-secondary">Last updated 3 mins ago</small>
+                        </div> -->
+                    </div>
+                </div>
+            </div>
         </section>
-
-        <section class="container-fluid contacto" id="Contacto">
-            <h1>Contacto</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis officiis delectus nisi dignissimos
-                rerum fuga odit deleniti est dolor, porro, excepturi, facere tenetur possimus ex aliquam repellendus
-                molestiae magnam pariatur.
-                Iusto animi fugit itaque repellendus vitae aspernatur? A ullam minima id ipsa, optio repellendus nam
-                facere dolores impedit iusto recusandae debitis vero voluptate fuga aut excepturi. Rem voluptatum nemo
-                ex!
-                Voluptatum doloremque reiciendis quas non. Natus distinctio culpa expedita illo totam! Excepturi natus
-                labore quaerat eum quam corrupti nam earum, nemo sint non consectetur commodi fuga ea saepe laudantium.
-                Dicta.
-                Consectetur, quam? Impedit deleniti eligendi placeat molestias, atque eveniet id dolores cupiditate
-                possimus quam architecto molestiae eos iste reprehenderit maiores magnam dicta dignissimos voluptatem!
-                Quasi esse id eligendi dicta sed?
-                Totam tempora ratione nam repellat corrupti molestias sunt vel id delectus autem dolore ullam
-                perspiciatis consectetur quaerat eveniet nisi rerum enim recusandae, veritatis reprehenderit eius quo?
-                Unde repellat deleniti vel.
-                Provident eveniet veniam voluptatum ex perferendis eum sint, fugiat ipsum rerum dolorem, minima nulla
-                atque sequi dignissimos soluta labore cum tempore, minus illo! Illum iste cupiditate sit exercitationem
-                dolore deserunt!
-                Enim unde pariatur officiis non a similique alias error eaque cum laudantium dignissimos veritatis
-                quibusdam dolores iure distinctio deleniti, corporis repellat, necessitatibus sapiente perferendis
-                praesentium porro. Est debitis odit sunt!
-                Consectetur beatae commodi aliquam rem nihil mollitia illum, sint id nulla. Molestiae temporibus,
-                praesentium obcaecati eius facilis ad fugit? Cum rerum illo maiores ex veniam nam, repellendus debitis
-                ipsum necessitatibus.
-                Animi eaque perspiciatis fuga ut quisquam, consequuntur corporis expedita error excepturi, unde repellat
-                ad aut tenetur quam at! Consequatur asperiores, deleniti voluptatum ab eveniet iste suscipit quasi
-                labore nobis porro!
-                Accusantium commodi nesciunt necessitatibus illum voluptates ex adipisci! Quod deserunt officiis,
-                exercitationem veniam iste, necessitatibus nisi ratione quos velit aperiam minima aut. Sint blanditiis
-                distinctio accusantium molestias, amet tempore praesentium.
-                Alias optio molestias ipsum, tempore dolorem quasi vero ea, saepe soluta non deserunt ullam!
-                Reprehenderit, repellendus laborum consectetur delectus aut repe</p>
-
+        <br>
+        <section class="container-fluid col d-flex flex-column h-100 align-items-center pt-4 contacto" id="Contacto">
+            <div class="container ms-auto">
+                <div class="col-sm-8 mx-auto">
+                    <form action="https://formspree.io/f/xeqwzwde" method="POST">
+                        <h1 class="text-center">Contacto</h1>
+                        <div class="mb-4">
+                            <label name="nombre" class="form-label text-white">Nombre</label>
+                            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder=""
+                                required>
+                        </div>
+                        <div class="mb-4">
+                            <label name="email" class="form-label text-white">Email</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder=""
+                                required>
+                        </div>
+                        <div class="mb-4">
+                            <label name="asunto" class="form-label text-white">Asunto (opcional)</label>
+                            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder=""
+                                required>
+                        </div>
+                        <div class="mb-4">
+                            <label name="comentarios" type="text" class="form-label text-white">Comentarios</label>
+                            <textarea name="mensaje" class="form-control" rows="3" required></textarea><br>
+                            <div class="mb-4">
+                                <button type="submit" class="btn w-100 btn-primary">Enviar</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </section>
     </main>
 
-    <footer class="footer">
-        <h1>Footer</h1>
+    <footer class="container-fluid text-white" id="footer">
+        <div class="container-footer text-center pt-4 mb-5">
+            <div class="row">
+                <div class="col-sm-12 col-lg-6 mx-auto">
+                    <div class="row">
+                        <div class="col-sm-12 text-center">
+                            <p class="mb-3">Santa Fe - Argentina</p>
+                        </div>
+                        <div class="col-sm-12 text-center">
+                            <p class="mb-3">Mis Redes</p>
+                            <div class="row text-center p-0 m-0">
+                                <div class="col-sm-12-m-0 d-flex justify-content-evenly">
+                                    <a target="_blank" href="https://es-la.facebook.com/" class="btn ms-4 btn-icon">
+                                        <img class="iconos" class="img-fluid" src="./assets/iconos-footer/facebook.webp"
+                                            alt="face">
+                                    </a>
+
+                                    <a target="_blank" href="https://www.twitter.com/" class="btn ms-4 btn-icon">
+                                        <img class="iconos" class="img-fluid" src="./assets/iconos-footer/twitter.webp"
+                                            alt="twit">
+                                    </a>
+
+                                    <a target="_blank" href="https://ar.linkedin.com/" class="btn ms-4 btn-icon">
+                                        <img class="iconos" class="img-fluid" src="./assets/iconos-footer/linkedin.webp"
+                                            alt="linke">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid text-center pb-0">
+            <p class="text-center">Copyright © 2023 - Nicolás Pannunzio -</p>
+        </div>
+        </div>
+        </div>
     </footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
