Modificaciones en HTML, agrego el LOGO, y se sube el index.js completo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <header class="header">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">LOGO</a>
+                <!-- <a class="navbar-brand" href="#">LOGO</a> -->
+                <img src="./assets/logo/logo.webp" height="150px" alt="logo">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -43,12 +44,12 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#Tienda">Perros</a></li>
                                 <li><a class="dropdown-item" href="#Tienda">Gatos</a></li>
-                                <li><a class="dropdown-item" href="#Tienda">Ver todo</a></li>
+                                <li><a class="dropdown-item" href="#Nuevos Productos">Nuevos Productos</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="#Nuevos Productos">Nuevos Productos</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="#Contacto">Contacto</a>
                         </li>
@@ -108,38 +109,6 @@
         <br>
         <section class="container-fluid tienda text-center text-white" id="Tienda">
             <h1>Tienda</h1>
-            <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis officiis delectus nisi dignissimos
-                rerum fuga odit deleniti est dolor, porro, excepturi, facere tenetur possimus ex aliquam repellendus
-                molestiae magnam pariatur.
-                Iusto animi fugit itaque repellendus vitae aspernatur? A ullam minima id ipsa, optio repellendus nam
-                facere dolores impedit iusto recusandae debitis vero voluptate fuga aut excepturi. Rem voluptatum nemo
-                ex!
-                Voluptatum doloremque reiciendis quas non. Natus distinctio culpa expedita illo totam! Excepturi natus
-                labore quaerat eum quam corrupti nam earum, nemo sint non consectetur commodi fuga ea saepe laudantium.
-                Dicta.
-                Consectetur, quam? Impedit deleniti eligendi placeat molestias, atque eveniet id dolores cupiditate
-                possimus quam architecto molestiae eos iste reprehenderit maiores magnam dicta dignissimos voluptatem!
-                Quasi esse id eligendi dicta sed?
-                Totam tempora ratione nam repellat corrupti molestias sunt vel id delectus autem dolore ullam
-                perspiciatis consectetur quaerat eveniet nisi rerum enim recusandae, veritatis reprehenderit eius quo?
-                Unde repellat deleniti vel.
-                Provident eveniet veniam voluptatum ex perferendis eum sint, fugiat ipsum rerum dolorem, minima nulla
-                atque sequi dignissimos soluta labore cum tempore, minus illo! Illum iste cupiditate sit exercitationem
-                dolore deserunt!
-                Enim unde pariatur officiis non a similique alias error eaque cum laudantium dignissimos veritatis
-                quibusdam dolores iure distinctio deleniti, corporis repellat, necessitatibus sapiente perferendis
-                praesentium porro. Est debitis odit sunt!
-                Consectetur beatae commodi aliquam rem nihil mollitia illum, sint id nulla. Molestiae temporibus,
-                praesentium obcaecati eius facilis ad fugit? Cum rerum illo maiores ex veniam nam, repellendus debitis
-                ipsum necessitatibus.
-                Animi eaque perspiciatis fuga ut quisquam, consequuntur corporis expedita error excepturi, unde repellat
-                ad aut tenetur quam at! Consequatur asperiores, deleniti voluptatum ab eveniet iste suscipit quasi
-                labore nobis porro!
-                Accusantium commodi nesciunt necessitatibus illum voluptates ex adipisci! Quod deserunt officiis,
-                exercitationem veniam iste, necessitatibus nisi ratione quos velit aperiam minima aut. Sint blanditiis
-                distinctio accusantium molestias, amet tempore praesentium.
-                Alias optio molestias ipsum, tempore dolorem quasi vero ea, saepe soluta non deserunt ullam!
-                Reprehenderit, repellendus laborum consectetur delectus aut repe</p> -->
         </section>
         <br>
         <section class="container-fluid Nuevos_Productos text-center text-white" id="Nuevos Productos">
@@ -193,22 +162,22 @@
                     <form action="https://formspree.io/f/xeqwzwde" method="POST">
                         <h1 class="text-center">Contacto</h1>
                         <div class="mb-4">
-                            <label name="nombre" class="form-label text-white">Nombre</label>
+                            <label name="nombre" class="form-label">Nombre</label>
                             <input type="text" class="form-control" id="exampleFormControlInput1" placeholder=""
                                 required>
                         </div>
                         <div class="mb-4">
-                            <label name="email" class="form-label text-white">Email</label>
+                            <label name="email" class="form-label">Email</label>
                             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder=""
                                 required>
                         </div>
                         <div class="mb-4">
-                            <label name="asunto" class="form-label text-white">Asunto (opcional)</label>
+                            <label name="asunto" class="form-label">Asunto (opcional)</label>
                             <input type="text" class="form-control" id="exampleFormControlInput1" placeholder=""
                                 required>
                         </div>
                         <div class="mb-4">
-                            <label name="comentarios" type="text" class="form-label text-white">Comentarios</label>
+                            <label name="comentarios" type="text" class="form-label">Comentarios</label>
                             <textarea name="mensaje" class="form-control" rows="3" required></textarea><br>
                             <div class="mb-4">
                                 <button type="submit" class="btn w-100 btn-primary">Enviar</button>
