--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
     <!-- Link Fonts Google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Acme&family=Fira+Sans+Extra+Condensed:wght@100&display=swap" rel="stylesheet">
 
     <!-- Link Hoja de Estilos -->
     <link rel="stylesheet" href="./css/style.css">
@@ -77,7 +81,7 @@
     <main class="main">
         <section class="container-fluid bienvenida text-center text-white" id="Bienvenida">
             <h1>Bienvenida</h1>
-            <p>¡Bienvenidos a nuestra tienda en línea de productos para mascotas! En nuestro e-commerce encontrarás una
+            <p class="parrafobienvenida">¡Bienvenidos a nuestra tienda en línea de productos para mascotas! En nuestro e-commerce encontrarás una
                 amplia gama de productos destinados al cuidado y entretenimiento de tus adorables compañeros caninos,
                 felinos y más.
 
@@ -229,14 +233,18 @@
         </div>
     </footer>
 
-
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
         crossorigin="anonymous"></script>
-    <script src="./scripts/index.js"></script>
-</body>
 
+    <!-- Script de la primera pre-entrega -->
+    <!-- <script src="./scripts/index.js"></script> -->
+
+    <!-- Script de la segunda pre-entrega -->
+    <script src="./scripts/carrito.js"></script>
+    
+</body>
 </html>
