--- a/index.html
+++ b/index.html
@@ -28,36 +28,32 @@
             </div>
 
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <!-- <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li> -->
+                <li><a href="#" class="nav-link px-2 link-secondary">M&T</a></li>
                 <li><a href="#iniciosesion" class="nav-link px-2">Inicio de Sesión</a></li>
                 <li><a href="#nuestrosarticulos" class="nav-link px-2">Nuestros Artículos</a></li>
                 <li><a href="#detalles" class="nav-link px-2">Detalles de tu compra</a></li>
-                <li><a href="#" class="nav-link px-2">Contacto</a></li>
+                <li><a href="#" class="nav-link px-2 link-secondary">Contacto</a></li>
             </ul>
 
             <div class="col-md-3 text-end">
                 <div id="ingresoDeUsuario" class="text-white"></div>
             </div>
-
         </header>
     </div>
 
     <main class="main">
-        <section class="container-fluid">
-            <div class="container">
-                <div class="container text-center">
+        <section class="container">
+            <div class="row">
+                <div class="col">
                     <h1 id="iniciosesion">Inicio de Sesión</h1>
-                </div>
-                <div class="row">
-                    <div class="col 3"></div>
-                    <div class="col-5 col-md-5">
+                    <div class="col-md-6">
                         <form id="form" class="row gy-2 gx-3 align-items-center">
-                            <div class="col-auto">
+                            <div class="col--sm-4">
                                 <label class="visually-hidden" for="autoSizingInput"></label>
                                 <input type="text" class="form-control" id="nombreyapellido"
                                     placeholder="Nombre y Apellido" required>
                             </div>
-                            <div class="col-auto">
+                            <div class="col--sm-4">
                                 <label class="visually-hidden" for="autoSizingInputGroup"></label>
                                 <div class="input-group">
                                     <div class="input-group-text">@</div>
@@ -86,14 +82,32 @@
                             </div>
                         </form>
                     </div>
-                    <div class="col 4"></div>
-                </div><br>
+                </div>
+
+                <div class="col" id="contenedor-weather">
+                    <h1>Weather Channel</h1>
+                    <div id="contenedor">
+                        <div id="caja1">
+                            <h3 id="temperatura-valor"></h3>
+                            <h2 id="temperatura-descripcion"></h2>
+                        </div>
+                        <div id="caja2">
+                            <h2 id="ubicacion"></h2>
+                            <img src="" alt="img-clima" id="icono-Animado" height="128" width="128">
+                        </div>
+                        <div id="caja3">
+                            <h3>Humedad</h3>
+                            <h3 id="humedad"></h3>
+                        </div>
+                    </div>
+                </div>
+            </div><br>
         </section>
 
-        <section class="container-fluid">
+        <section class="container">
 
             <div class="container text-center">
-                <h1 id="nuestrosarticulos">Nuestra Tienda M & T</h1>
+                <h1 id="nuestrosarticulos">Nuestra Tienda M & T</h1><br>
             </div>
 
             <div>
@@ -102,8 +116,7 @@
 
         </section>
 
-        <section class="container-fluid">
-
+        <section class="container">
             <div class="container text-center">
                 <h1 id="detalles">Detalles de tu compra</h1>
             </div>
@@ -119,7 +132,9 @@
                 </thead>
                 <tbody id="carritoBody"></tbody>
             </table>
-            <button id="botonMagico"><span>Confirmar Compra</span></button>
+            <div id="btnMagico">
+                <button id="botonMagico" style="display: none;"><span>Finalizar Compra</span></button>
+            </div>
         </section>
     </main>
 
@@ -147,9 +162,9 @@
                             <path
                                 d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z" />
                         </svg></a></li>
-                <li class="ms-3"><a class="text-body-secondary" target="_blank" href="https://www.linkedin.com/in/nicolas-a-pannunzio-/"><svg
-                            xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
-                            class="bi bi-linkedin" viewBox="0 0 16 16">
+                <li class="ms-3"><a class="text-body-secondary" target="_blank"
+                        href="https://www.linkedin.com/in/nicolas-a-pannunzio-/"><svg xmlns="http://www.w3.org/2000/svg"
+                            width="24" height="24" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
                             <path
                                 d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
                         </svg></a></li>
@@ -186,5 +201,4 @@
     <script src="./scripts/ProyectoFinal.js"></script>
 
 </body>
-
 </html>
